# bazel-ex

./: .gitignore  BUILD.bazel  WORKSPACE
proto/echo/v1/: BUILD.bazel  echo.proto
proto/hello_world/v1/: BUILD.bazel  helloworld.proto
src/echo/: BUILD.bazel  go.mod  go.sum  main.go
src/hello_world/: BUILD.bazel  go.mod  main.go
src/logger/go/: BUILD.bazel  go.mod  logger.go  logger_test.go
