load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/sueken5/bazel-ex/src/echo",
    visibility = ["//visibility:private"],
    deps = ["//src/logger/go:go_default_library"],
)

go_binary(
    name = "echo",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
