load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "proto_hello_world_v1_proto",
    srcs = ["helloworld.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "proto_hello_world_v1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/sueken5/bazel-ex/proto/hello_world/v1",
    proto = ":proto_hello_world_v1_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":proto_hello_world_v1_go_proto"],
    importpath = "github.com/sueken5/bazel-ex/proto/hello_world/v1",
    visibility = ["//visibility:public"],
)
